# coordination-engine

./: .eslintrc.cjs  .gitignore  BACKEND.md  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  Inference-fix-plan.txt  MIGRATION_CHECKLIST.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  UX_IMPROVEMENTS.md  coordination-engine-PRD.md  deploy-local.sh  event_creation.py  jest.config.js  main.py  micro-cultural-engine.md  moderation.py  package-lock.json  package.json  preferences.py  tsconfig.json
telegram-bot/: .DONE  .gitignore  MENU_SYSTEM.md  README.md  REFORMATTING.md  add_admin_column.py  add_column_direct.py  check_column.py  docker-compose.yml  main.py  mypy.ini  requirements-dev.txt  requirements.txt  resume.sh  setup.cfg  start.sh  test_setup.py
telegram-bot/.qwen/: settings.json  settings.json.orig
telegram-bot/ai/: __init__.py  core.py  llm.py  rules.py  schemas.py
telegram-bot/bot/: __init__.py
telegram-bot/bot/commands/: back.py  cancel.py  check_deadlines.py  (+24 more)
telegram-bot/config/: logging.py  settings.py
telegram-bot/coordination_engine/: __init__.py  bootstrap.py  main.py
telegram-bot/db/: README.md  __init__.py  connection.py  errors.py  models.py  schema.sql  users.py
telegram-bot/docs/: Design-Choices.md
telegram-bot/scripts/: add_v2_columns.py  check_quality.sh  create_db.sh  create_enum_types.py  migrate_v2.py  migrate_v2_complete.py
telegram-bot/tests/: conftest.py  test_behavioral_neutrality.py  test_commands.py  test_comprehensive.py  test_group_membership_enforcement.py  test_integration.py  test_services.py  test_setup.py
(+388 files in other folders)
