[metadata]
name = coordination-engine-bot
version = 3.2.0
description = Coordination Engine Telegram Bot

[options]
python_requires = >=3.13,<3.15

[flake8]
max-line-length = 120
exclude = .venv,build,dist
# Black puts spaces in slices (e.g. a[i + 1 :]); PEP 8 allows ignoring E203 when using Black
extend-ignore = E203
